<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ba.etf.rma23.projekat.GameDetailActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="98dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_game" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/item_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/cover_imageview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_image"
                />

            <ImageView
                android:id="@+id/cover_imageview"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/platform_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_title_textview" />

            <TextView
                android:id="@+id/platform_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/release_date_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cover_imageview" />

            <TextView
                android:id="@+id/release_date_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/esrb_rating_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/platform_textview" />

            <TextView
                android:id="@+id/esrb_rating_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/developer_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release_date_textview" />

            <TextView
                android:id="@+id/developer_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/publisher_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/esrb_rating_textview" />

            <TextView
                android:id="@+id/publisher_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/genre_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/developer_textview" />

            <TextView
                android:id="@+id/genre_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/description_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/publisher_textview" />

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/comments_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre_textview" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        android:paddingBottom="50dp"/>
</LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>