<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    tools:context="ba.etf.rma23.projekat.MainActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="98dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo_game" />


    <EditText
        android:id="@+id/search_query_edittext"
        android:layout_width="700px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/searchGames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image"
        app:layout_constraintBottom_toTopOf="@+id/search_button_saved"
        />

    <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="Search new"
                    app:layout_constraintEnd_toStartOf="@+id/search_button_saved"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_query_edittext"
                    app:layout_constraintBottom_toTopOf="@+id/barrier"
                     />
    <Button
        android:id="@+id/search_button_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="Search saved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_button"
        app:layout_constraintTop_toBottomOf="@+id/search_query_edittext"
        app:layout_constraintBottom_toTopOf="@+id/barrier"
        />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="search_query_edittext, search_button"
       />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/game_list"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrier"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingBottom="50dp"
                    />
   

    <Button
        android:id="@+id/safe_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="Safe mode"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_list"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/saved_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:text="Saved games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_list"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>